<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:layout_centerHorizontal="true"
    android:background="@color/background"
    tools:context=".server.ServerStarter">

    <ScrollView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/block">

        <TextView
            style="@style/header"
            android:text="@string/header_info"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/block_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:text="@string/name"/>

                <EditText
                    android:id="@+id/info_name"
                    android:layout_width="0dp"
                    android:editable="false"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:text="@string/ip"/>

                <EditText
                    android:id="@+id/info_ip"
                    android:layout_width="0dp"
                    android:editable="false"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/size"/>

                <EditText
                    android:id="@+id/info_width"
                    android:layout_width="0dp"
                    android:editable="false"
                    android:layout_height="wrap_content"
                    android:maxLength="4"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="x"/>

                <EditText
                    android:id="@+id/info_height"
                    android:layout_width="0dp"
                    android:editable="false"
                    android:layout_height="wrap_content"
                    android:maxLength="4"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dpi"/>

                <EditText
                    android:id="@+id/info_dpi"
                    android:layout_width="wrap_content"
                    android:editable="false"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/block">

        <TextView
            style="@style/header"
            android:text="@string/server"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/block_content">

            <RadioGroup
                android:id="@+id/server_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/server_auto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/auto"/>

                <RadioButton
                    android:id="@+id/server_set"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set"/>

            </RadioGroup>

            <EditText
                android:id="@+id/server_address"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/default_host"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/block">

        <TextView
            style="@style/header"
            android:text="@string/mode"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/block_content">

            <RadioGroup
                android:id="@+id/mode_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/mode_exhi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Exhibition"/>

                <RadioButton
                    android:id="@+id/mode_pres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/presentation"/>

            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/alert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/block_background"
        android:gravity="center"
        android:text="@string/hit_start"
        android:lines="3"/>

    <Button
        android:id="@+id/start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start"
        style="@style/flat_button"/>

    </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/progress_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@color/progress_background">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

    </FrameLayout>

</FrameLayout>